--- a/frontend/src/components/SpotsBrowser/SpotsBrowser.css
+++ b/frontend/src/components/SpotsBrowser/SpotsBrowser.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+
 .spots-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -19,7 +21,8 @@
 }
 
 .text {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
+    font-family: 'Roboto';
 }
 
 .category {
