--- a/frontend/src/components/Reviews/Reviews.css
+++ b/frontend/src/components/Reviews/Reviews.css
@@ -1,7 +1,8 @@
 .reviews-container {
     background-color: white;
-    margin: auto;
+    margin-left: 12%;
     width: 50%;
+    padding-top: 5%;
     /* align-items: center; */
     /* margin-left: 50%; */
 }
@@ -17,13 +18,31 @@
     align-items: center;
 }
 
-#text-for-review {
-    width: 100px;
-    height: 100px;
+#text-submit-review {
+    resize: none;
+    outline: none;
+    width: 85%;
 }
 
-.line {
-   
-      box-shadow: 0 0.5px 0 black;
+.review-text {
+    padding-bottom: 10%;
+    padding-top: 10%;
+    border-bottom: 1px solid rgb(206, 206, 206);
+    border-top: 1px solid rgb(206, 206, 206);
+}
 
-  }
+.div-lines {
+    border-bottom: 1px solid rgb(206, 206, 206);
+    padding-bottom: 10px;
+}
+#review-button {
+    background-color: aquamarine;
+    border: none;
+    padding: 3%;
+    margin-left: 70%;
+    color: white;
+}
+
+#review-heading {
+    margin-left: 5%;
+}
