--- a/frontend/src/components/SpotsBrowser/SpotsBrowser.css
+++ b/frontend/src/components/SpotsBrowser/SpotsBrowser.css
@@ -4,18 +4,17 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 5%;
+    /* margin-right: 20%; */
     grid-row-gap: 100px;
-    grid-column-gap: 50px;
+    grid-column-gap: 10px;
 }
 
 .spots-img:hover {
-    padding-bottom: 5px;
+    margin-bottom: 5px;
     box-shadow: 0 0 11px rgba(33,33,33,.2);
 }
 .spots-img {
-    position: relative;
     width: 350px;
     height: 350px;
     border-radius: 25px;
