--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,7 @@
 /* TODO Add site wide styles */
 
 body {
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     background-color: rgb(228, 228, 228);
-    color: rgb(0, 46, 0)
+    color: rgb(0, 32, 0)
 }
